--- a/taskmanager/src/main/resources/application.properties
+++ b/taskmanager/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 spring.datasource.url=jdbc:h2:mem:taskmanager
 spring.datasource.driverClassName=org.h2.Driver
@@ -8,3 +9,5 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format.sql=true
